# jobpulse

./: .dockerignore  .gitignore  README.md  main.py  pyproject.toml  requirements.deploy.txt
.github/workflows/: ci.yml
data/db/: jobs.db  jobs.db.bak
data/vectors/: build_summary.json  jobs.faiss  refresh_summary.json
docker/: Dockerfile.api  Dockerfile.ui
docs/: metrics_scraper.md  reliability_statement_scraper.md  runbook_scraper.md  system_design_scraper.md
infra/: docker-compose.dev.yml  docker-compose.yml
scripts/: LLM_extract_by_prompt.py  LLM_extract_by_small_model.py  build_sft_dataset.py  build_vector_index.py  daily_update.py  debug_job_search_page.py  discover_selectors.py  eval_base.py  eval_by_lora.py  eval_by_prompt.py  eval_student.py  eval_val_split.py  export_jobs_from_db.py  export_one_jd_from_db.py  login.py  refresh_embeddings.py  run_api.py  run_graph_one.py  run_one_job_mcp.py  run_pipeline.py  run_ui.py  smoke_baseline_extract.py  smoke_collect_job_links.py  smoke_detail_structured.py  smoke_new_hf_lora.py  smoke_new_hf_plain.py  smoke_open.py  smoke_scrape_first_job.py  smoke_scrape_job_detail.py  structure_jobs_local.py  test_vector_search.py
src/: config.py  db.py  extract.py  report.py
src/api/: main.py  schemas.py
src/eval/: extraction_metrics.py
src/extractors/: local_hf.py  skill_rules.py
src/llm/: json_repair.py
src/mcp_server/: server.py  tools_extract.py  tools_extract_api.py  tools_fetch.py  tools_qc.py  tools_report.py
src/observability/: artifact_writer.py
src/orch/: graph.py  schema.py
src/resume/: parse.py
src/retrieval/: documents.py  embed.py  faiss_index.py  (+2 more)
tests/: test_api.py  test_resume_match.py
(+95 files in other folders)
