[project]
name = "jobpulse"
version = "0.1.0"
description = "Automated job market intelligence pipeline with browser automation and analysis"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "playwright>=1.41",
    "pandas>=2.0",
    "pyyaml",
    "rich",

  "torch",
  "transformers>=4.41",
  "accelerate>=0.30",
  "bitsandbytes>=0.43",
  "pydantic>=2.0",
  "kernels>=0.12.1",
  "tqdm",
]

[dependency-groups]
dev = [
  "ipython",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
