[project]
name = "jobpulse"
version = "0.1.0"
description = "Automated job market intelligence pipeline with browser automation and analysis"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "playwright>=1.41",
    "pandas>=2.0",
    "pyyaml",
    "rich",
    "torch",
    "transformers>=4.41",
    "accelerate>=0.30",
    "bitsandbytes>=0.43",
    "pydantic>=2.0",
    "kernels>=0.12.1",
    "tqdm",
    "datasets",
    "peft",
    "mcp>=1.26.0",
    "httpx>=0.28.1",
    "langgraph>=1.0.8",
    "git-filter-repo>=2.47.0",
    "playwright-stealth>=2.0.2",
    "faiss-cpu>=1.13.2",
    "sentence-transformers>=5.2.3",
    "fastapi>=0.135.1",
    "uvicorn[standard]>=0.41.0",
    "streamlit>=1.55.0",
    "pydantic-settings>=2.13.0",
]

[dependency-groups]
dev = [
  "ipython",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
